# zellij-switch

./: .envrc  .gitignore  .rustc_info.json  Cargo.toml  README.md  flake.nix
src/: main.rs
